--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   provider: ^6.0.5
   intl: ^0.18.1
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.5.0     
+  firebase_auth: ^4.2.0
 
 dev_dependencies:
   flutter_test:
